--- a/covid-update.html
+++ b/covid-update.html
@@ -18,14 +18,14 @@ tags:
 - virus
 location: York
 intro_section:
-  title: All systems go
+  title: Lockdown 2.0
   sub-title: Here you can find the latest information on how learning to drive with checkmirrors has changed due to Corona Virus.
 updates_section:
   section_cards:
-  - card_image: "/uploads/operational.png"
-    card_title: We are open
+  - card_image: "/uploads/cross.png"
+    card_title: Lessons are delayed
     card_text: |-
-      checkmirrors is still open for lessons, this will be continuously reviewed as per government guidance.
+      Due to government lockdown, lessons are currently delayed from taking place until December 2nd.
   - card_image: "/uploads/facemask.png"
     card_title: Wear a mask
     card_text: |-
@@ -44,7 +44,7 @@ faq_section:
   questions:
   - question_text: Are you still open?
     answer_text: |-
-      Yes, all of our driving instructors are still providing lessons. We review this on a regular basis in accordance with government guidelines.
+      Currently, due to the new government lockdown, we are unable to provide driving lessons until December 2nd. Don't worry you can still book your driving lessons with checkmirrors, simply [call 07821 291 783](tel:07821291783) or [book online](../book-now "Book now"). It may take a while before we can resume driving lessons as we will be following government guidance and national and local lockdown rules.
   - question_text: Are you accepting new students?
     answer_text: |-
       Yes, we are still be accepting new students. We will ask you some questions covid related questions prior to your first lesson to make sure you're feeling well and able. Please [contact us here](https://www.checkmirrors.co.uk/book-now) or via our [Facebook page](https://www.facebook.com/checkmirrors)
@@ -89,6 +89,11 @@ faq_section:
     </div>
     {% endfor %}
   </div>
+  <div class="row mb-1 justify-content-center">
+    <div class="col-mb-12">
+      <p>Don't worry, you can still book your driving lesson, please note this bookings may be delayed until after lockdown has been lifted.</p>
+    </div>
+  </div>
 </section>
 
 {% include book-promo-dark.html %}
@@ -127,3 +132,13 @@ faq_section:
     </div>
   </div>
 </section>
+
+
+<!--
+We are open
+checkmirrors is still open for lessons, this will be continuously reviewed as per government guidance
+
+- question_text: Are you still open?
+  answer_text: |-
+    Yes, all of our driving instructors are still providing lessons. We review this on a regular basis in accordance with government guidelines.
+ -->
