--- a/covid-update.html
+++ b/covid-update.html
@@ -48,7 +48,7 @@ faq_section:
     answer_text: Currently, due to the new government lockdown, we are unable to provide
       driving lessons until December 2nd. Don't worry you can still book your driving
       lessons with checkmirrors, simply [call 07821 291 783](tel:07821291783) or [book
-      online](https://www.checkmirrors.co.uk/book-now "Book now"). It may take a while
+      online](https://www.checkmirrors.co.uk/book-now/ "Book now"). It may take a while
       before we can resume driving lessons as we will be following government guidance
       and national and local lockdown rules.
   - question_text: Are you accepting new students?
