--- a/covid-update.html
+++ b/covid-update.html
@@ -54,7 +54,7 @@ faq_section:
   - question_text: Are you accepting new students?
     answer_text: Yes, we are still be accepting new students. We will ask you some
       questions covid related questions prior to your first lesson to make sure you're
-      feeling well and able. Please [contact us here](https://www.checkmirrors.co.uk/book-now)
+      feeling well and able. Please [contact us here](https://www.checkmirrors.co.uk/book-now/)
       or via our [Facebook page](https://www.facebook.com/checkmirrors)
   - question_text: What do you do to protect against the virus?
     answer_text: |-
