--- a/covid-update.html
+++ b/covid-update.html
@@ -1,5 +1,5 @@
 ---
-title: COVID-19 Update
+title: Latest COVID-19 Update
 description: All of the checkmirrors driving instructors are fully COVID secure following
   the latest government guidance. Wear a mask, wash hands, clean cars.
 permalink: "/covid-19-update/"
