--- a/covid-update.html
+++ b/covid-update.html
@@ -148,12 +148,38 @@ faq_section:
   </div>
 </section>
 
-
-<!--
-We are open
-checkmirrors is still open for lessons, this will be continuously reviewed as per government guidance
-
-- question_text: Are you still open?
-  answer_text: |-
-    Yes, all of our driving instructors are still providing lessons. We review this on a regular basis in accordance with government guidelines.
- -->
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [{
+      "@type": "Question",
+      "name": "What happens after July 19th?",
+      "acceptedAnswer": [{
+        "@type": "Answer",
+        "text": "Even though the government has decided to lift most restrictions, we at checkmirrors have decided to continue to require face masks and sanitiser for both instructors and students.\n\nWe have made this decision as we feel it is important to continue to keep our instructors and students as safe as we can during such an uncertain period."
+      }]
+    }, {
+      "@type": "Question",
+      "name": "Can I still book a driving lesson?",
+      "acceptedAnswer": [{
+        "@type": "Answer",
+        "text": "Checkmirrors are back to operating as usual which means you can now book and have your lessons with our excellent team of ADI Driving Instructors. You can book your driving lessons with checkmirrors by calling 07821 291 783 or booking online. All of the checkmirros driving instructors will be following government guidance and national and local lockdown rules."
+      }]
+    }, {
+      "@type": "Question",
+      "name": "Are you accepting new students?",
+      "acceptedAnswer": [{
+        "@type": "Answer",
+        "text": "Yes, we are still be accepting new students. We will ask you some questions covid related questions prior to your first lesson to make sure you’re feeling well and able. Please contact us here or via our Facebook page"
+      }]
+    }, {
+      "@type": "Question",
+      "name": "What do you do to protect against the virus?",
+      "acceptedAnswer": [{
+        "@type": "Answer",
+        "text": "Here at checkmirrors we have several procedures in place to protect our students and driving instructors alike, which we review regularly in line with government guidance.\n\nAll students and driving instructors must wear a face mask or covering at all times\nAll cars are thoroughly cleaned between each lesson\nHand sanitiser is provided in all of our cars"
+      }]
+    }]
+  }
+</script>
