--- a/covid-update.html
+++ b/covid-update.html
@@ -125,21 +125,16 @@ faq_section:
   </div>
   <div class="row">
     <div class="col-12">
-      <div class="accordion mb-5" id="faq_section">
+      <div class="accordion accordion-flush mb-5" id="accordionFlushExample">
         {% for question in page.faq_section.questions %}
-        <div class="card">
-          <div class="card-header" id="heading{{forloop.index}}">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#question{{forloop.index}}" {% if forloop.index == 1 %} aria-expanded="true" {% else %} aria-expanded="false" {% endif %} aria-controls="question{{forloop.index}}">
-                {{ question.question_text }}
-              </button>
-            </h2>
-          </div>
-
-          <div id="question{{forloop.index}}" {% if forloop.index == 1 %} class="collapse show" {% else %} class="collapse" {% endif %} aria-labelledby="headingOne{{forloop.index}}" data-parent="#faq_section">
-            <div class="card-body">
-              {{ question.answer_text | markdownify }}
-            </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-heading{{forloop.index}}">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{forloop.index}}" aria-expanded="false" aria-controls="flush-collapse{{forloop.index}}">
+              {{ question.question_text }}
+            </button>
+          </h2>
+          <div id="flush-collapse{{forloop.index}}" {% if forloop.index == 1 %} class="collapse show" {% else %} class="collapse" {% endif %} aria-labelledby="flush-heading{{forloop.index}}" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">  {{ question.answer_text | markdownify }}</div>
           </div>
         </div>
         {% endfor %}
