--- a/covid-update.html
+++ b/covid-update.html
@@ -92,7 +92,7 @@ faq_section:
     <div class="col-md-3 col-xs-12">
       <div class="card mb-3">
         <div class="card-img-top">
-          <img src="{{ site.github.url }}{{ section_card.card_image }}" alt="Our fleet">
+          <img src="{{ site.cloudinary_url }}{{ section_card.card_image }}" alt="{{ section_card.card_title }}">
         </div>
         <div class="card-body">
           <h4 class="card-title"><a>{{ section_card.card_title }}</a></h4>
